Preventing desktop-sized navigation placeholder from appearing on mobile during load (https://github.com/woocommerce/woocommerce-admin/pull/5616)

--- a/plugins/woocommerce-admin/client/navigation/style.scss
+++ b/plugins/woocommerce-admin/client/navigation/style.scss
@@ -11,6 +11,15 @@
 		display: none !important;
 	}
 
+	#wpcontent,
+	#wpfooter {
+		margin-left: $navigation-width;
+
+		@media ( max-width: 960px ) {
+			margin-left: 0;
+		}
+	}
+
 	#woocommerce-embedded-navigation {
 		position: fixed;
 		top: 0;
@@ -20,6 +29,11 @@
 		box-sizing: border-box;
 		background-color: $gray-900;
 		z-index: 1100; //Must be greater than z-index on .woocommerce-layout__header
+
+		@media ( max-width: 960px ) {
+			width: $header-height;
+			height: $header-height;
+		}
 	}
 
 	.woocommerce-navigation__wrapper {
@@ -31,14 +45,10 @@
 		box-sizing: border-box;
 	}
 
-	&:not(.is-folded) {
-		#wpcontent,
-		#wpfooter {
-			margin-left: $navigation-width;
-
-			@media ( max-width: 960px ) {
-				margin-left: 0;
-			}
+	&.is-expanded {
+		#woocommerce-embedded-navigation {
+			width: $navigation-width;
+			height: 100%;
 		}
 	}
 
